fixed scrollbar on userStoryTicketEdit

--- a/css/userStory_edit.css
+++ b/css/userStory_edit.css
@@ -39,7 +39,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .userStoryEditContainerInside {
